Portlet font size fix
  - Relative sizes do stack, and since portlets can potentially occur
    inside content pane minus the wrapper, this attempt to make the
    font-sizes not too big.

git-svn-id: https://svn.physiomeproject.org/svn/physiome/cellml.theme/trunk@5903 eb92df5b-a40c-0410-b02c-bf52feaaa166

--- a/cellml/theme/browser/stylesheets/tripoli.base.css
+++ b/cellml/theme/browser/stylesheets/tripoli.base.css
@@ -321,7 +321,7 @@ input[type='hidden']
 _______________________________
 CONTENT */
 
-.portlet,
+.portletWrapper .portlet,
 .contentViews,
 .contentActions,
 .overlay #content-core,
